# crate

./: .gitignore  CLAUDE.md  README.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  .gitignore  Cargo.toml  README.md
backend/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
backend/src/: lib.rs  main.rs
backend/src/config/: app.rs  database.rs  mod.rs
backend/src/database/: mod.rs  neo4j.rs  postgres.rs
backend/src/database/migrations/neo4j/: 001_initial_schema.cypher
backend/src/database/repositories/: audit_repository.rs  ci_repository.rs  graph_repository.rs  graph_repository_old.rs  lifecycle_repository.rs  mod.rs  relationship_repository.rs  valuation_repository.rs
backend/src/error/: app_error.rs  mod.rs  response.rs
backend/src/handlers/: amortization.rs  audit.rs  auth.rs  ci_management.rs  dashboard.rs  graph.rs  import_export.rs  lifecycle.rs  mod.rs  relationship.rs
backend/src/jobs/: amortization_job.rs  cleanup_job.rs  mod.rs  scheduler.rs
backend/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs
backend/src/models/: audit_log.rs  ci_assets.rs  ci_lifecycle.rs  ci_types.rs  mod.rs  relationship_types.rs  user.rs  valuation.rs
backend/src/services/: amortization_service.rs  audit_service.rs  auth_service.rs  ci_service.rs  graph_service.rs  import_export.rs  lifecycle_service.rs  mod.rs  relationship_service.rs
backend/src/utils/: auth.rs  csv.rs  date_utils.rs  json_diff.rs  mod.rs  validation.rs
backend/tests/: mod.rs
frontend/: .env.local.example  (+6 more)
(+52 files in other folders)
