[package]
name = "crate-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }


# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "uuid", "chrono", "json", "runtime-tokio-rustls", "ipnetwork", "bigdecimal", "migrate"] }
neo4rs = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and Time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Decimal for financial calculations
rust_decimal = { version = "1.0", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Utilities
anyhow = "1.0"
async-trait = "0.1"
csv = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Background jobs
cron = "0.12"

# Config
config = "0.14"

# Error handling
thiserror = "1.0"

# Random generation
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "server"
path = "src/main.rs"